<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.mccwireless.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/txtTotal"
        android:layout_below="@+id/btnReset"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cellphone"
        android:id="@+id/imageView2"
        android:layout_below="@+id/txtTotal"
        android:layout_marginTop="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtWelcome"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="#FF00FF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:text="@string/ultima_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radSamsungPhone"
        android:textSize="10sp"
        android:layout_below="@+id/radData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp" />

    <RadioButton
        android:text="@string/unlimited_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radData"
        android:textSize="10sp"
        android:layout_below="@+id/radUnlTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp" />

    <Button
        android:text="@string/submit_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/btnUpdateP"
        android:layout_alignLeft="@+id/btnReset"
        android:layout_alignStart="@+id/btnReset" />

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnReset"
        android:layout_below="@+id/btnSubmit"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/update_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnUpdateP"
        android:layout_below="@+id/radSamsungPhone"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:text="@string/umlimited_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radUnlTxt"
        android:checked="false"
        android:textSize="10sp"
        android:layout_below="@+id/txtOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtOffer"
        android:textSize="17sp"
        android:textAlignment="center"
        android:textColor="#ffd700"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="10sp"
        android:textAlignment="center"
        android:textColor="#00bfff"
        android:layout_below="@+id/txtWelcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
